k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: techflow-api
  namespace: techflow
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: api
