k8s/service-web-form.yaml
apiVersion: v1
kind: Service
metadata:
  name: techflow-web-form
  namespace: techflow
  labels:
    app: web-form
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: web-form
